--- a/package.json
+++ b/package.json
@@ -74,6 +74,8 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "2.0.5",
+    "prettier-eslint": "^10.1.1",
     "push-dir": "^0.4.1",
     "rimraf": "^2.6.0",
     "sass": "^1.26.5",
