:heavy_plus_sign: add eslint

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "deepmerge": "^4.2.2",
-    "eslint": "^4.15.0",
+    "eslint": "^7.1.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
